--- a/src/app/modules/tracking/tracking-view/tracking-stepper-view/tracking-stepper-view.template.html
+++ b/src/app/modules/tracking/tracking-view/tracking-stepper-view/tracking-stepper-view.template.html
@@ -12,7 +12,7 @@
                    matBadgeColor="warn"
                    [matBadgeHidden]="numberOfItemsOnStatus(step.title, i) <= 0">{{step.title.text}}</p>
                 <p class="sub-title" [ngClass]="{'d-block d-md-none': !vertical}">{{step.description}}</p>
-                            <span class="date" [ngClass]="{'d-block d-md-none': !vertical}">{{ step.date ? (step.date | date: 'dd-MM-yyyy') : '-' }}</span>
+                            <span class="date" [ngClass]="{'d-block d-md-none': !vertical}">{{ step.date ? (step.date | date: 'dd-MM-yy') : '-' }}</span>
             </div>
 
             <div class="step d-block order-0"
@@ -37,7 +37,7 @@
             <div class="step-details d-none d-md-block" *ngIf="!vertical">
                 <div class="alcanzado-text" *ngIf="step.icon !== 'pending'">{{ step.description || '-' }}</div>
                 <p>{{ step.description }}</p>
-                <span>{{ step.date ? (step.date | date: 'dd-MM-yyyy') : '-' }}</span>
+                <span>{{ step.date ? (step.date | date: 'dd-MM-yy') : '-' }}</span>
             </div>
         </div>
     </ng-container>
